@@ -219,61 +219,70 @@ int	zbx_db_connect(char *host, char *user, char *password, char *dbname, char *d
 	}
 #endif
 #ifdef	HAVE_ORACLE
-	char *connect = NULL;
-	sword err = OCI_SUCCESS;
+	char	*connect = NULL;
+	sword	err = OCI_SUCCESS;
 
 #if defined(HAVE_GETENV) && defined(HAVE_PUTENV)
-	if (NULL == getenv ("NLS_LANG")) {
-		putenv ("NLS_LANG=.UTF8");
-	}
+	if (NULL == getenv("NLS_LANG"))
+		putenv("NLS_LANG=.UTF8");
 #endif /* defined(HAVE_GETENV) && defined(HAVE_PUTENV) */
 
-	memset (&oracle, 0, sizeof (oracle));
+	memset(&oracle, 0, sizeof(oracle));
 
-	if (host && *host) {
+	/* connection string format: [//]host[:port][/service name] */
+
+	if (host && *host)
+	{
 		connect = zbx_strdcatf(connect, "//%s", host);
 
 		if (port)
 			connect = zbx_strdcatf(connect, ":%d", port);
-	}
 
-	if (dbname && *dbname && connect) {
-		if (connect)
-			connect = zbx_strdcat(connect, "/");
-		connect = zbx_strdcatf(connect, "%s", dbname);
+		if (dbname && *dbname)
+			connect = zbx_strdcatf(connect, "/%s", dbname);
 	}
-
-	/* initialize environment */
-	err = OCIEnvCreate((OCIEnv **) &oracle.envhp, (ub4) OCI_DEFAULT,
-			(dvoid *) 0, (dvoid * (*)(dvoid *,size_t)) 0,
-			(dvoid * (*)(dvoid *, dvoid *, size_t)) 0,
-			(void (*)(dvoid *, dvoid *)) 0, (size_t) 0, (dvoid **) 0);
-	if (OCI_SUCCESS != err) {
-		zabbix_errlog(ERR_Z3001, connect, err, zbx_oci_error(err));
+	else
 		ret = ZBX_DB_FAIL;
+
+	if (ZBX_DB_OK == ret)
+	{
+		/* initialize environment */
+		err = OCIEnvCreate((OCIEnv **)&oracle.envhp, (ub4)OCI_DEFAULT,
+				(dvoid *)0, (dvoid * (*)(dvoid *,size_t))0,
+				(dvoid * (*)(dvoid *, dvoid *, size_t))0,
+				(void (*)(dvoid *, dvoid *))0, (size_t)0, (dvoid **)0);
+		if (OCI_SUCCESS != err)
+		{
+			zabbix_errlog(ERR_Z3001, connect, err, zbx_oci_error(err));
+			ret = ZBX_DB_FAIL;
+		}
 	}
 
-	if (ZBX_DB_OK == ret) {
+	if (ZBX_DB_OK == ret)
+	{
 		/* allocate an error handle */
-		(void) OCIHandleAlloc((dvoid *) oracle.envhp, (dvoid **) &oracle.errhp, OCI_HTYPE_ERROR,
-			(size_t) 0, (dvoid **) 0);
+		(void)OCIHandleAlloc((dvoid *)oracle.envhp, (dvoid **)&oracle.errhp, OCI_HTYPE_ERROR,
+				(size_t)0, (dvoid **)0);
 
 		/* get the session */
 		err = OCILogon2(oracle.envhp, oracle.errhp, &oracle.svchp,
-				(text *)user, (ub4)strlen(user),
-				(text *)password, (ub4)strlen(password),
+				(text *)user, (ub4)(NULL != user ? strlen(user) : 0),
+				(text *)password, (ub4)(NULL != password ? strlen(password) : 0),
 				(text *)connect, (ub4)strlen(connect),
 				OCI_DEFAULT);
 
-		if (OCI_SUCCESS != err) {
+		if (OCI_SUCCESS != err)
+		{
 			zabbix_errlog(ERR_Z3001, connect, err, zbx_oci_error(err));
 			ret = ZBX_DB_DOWN;
 		}
-		else {
+		else
+		{
 			err = OCIAttrGet((void *)oracle.svchp, OCI_HTYPE_SVCCTX,
 						(void *)&oracle.srvhp, (ub4 *)0,
 						OCI_ATTR_SERVER, oracle.errhp);
-			if (OCI_SUCCESS != err) {
+			if (OCI_SUCCESS != err)
+			{
 				zabbix_errlog(ERR_Z3001, connect, err, zbx_oci_error(err));
 				ret = ZBX_DB_DOWN;
 			}
@@ -282,12 +291,10 @@ int	zbx_db_connect(char *host, char *user, char *password, char *dbname, char *d
 
 	zbx_free(connect);
 
-	if (ZBX_DB_OK != ret) {
-		zbx_db_close ();
-	}
+	if (ZBX_DB_OK != ret)
+		zbx_db_close();
 #endif
 #ifdef	HAVE_SQLITE3
-	/* check to see that the backend connection was successfully made */
 #ifdef	HAVE_FUNCTION_SQLITE3_OPEN_V2
 	if (SQLITE_OK != (ret = sqlite3_open_v2(dbname, &conn, SQLITE_OPEN_READWRITE, NULL)))
 #else
@@ -331,12 +338,14 @@ void	zbx_db_init(char *host, char *user, char *password, char *dbname, char *dbs
 #endif
 
 #ifdef	HAVE_SQLITE3
-	if (0 != stat(dbname, &buf)) {
+	if (0 != stat(dbname, &buf))
+	{
 		zabbix_log(LOG_LEVEL_WARNING, "Cannot open database file \"%s\": %s", dbname, strerror(errno));
 		zabbix_log(LOG_LEVEL_WARNING, "Creating database ...");
 
 		ret = sqlite3_open(dbname, &conn);
-		if (SQLITE_OK != ret) {
+		if (SQLITE_OK != ret)
+		{
 			zabbix_errlog(ERR_Z3002, dbname, 0, sqlite3_errmsg(conn));
 			exit(FAIL);
 		}
@@ -375,7 +384,6 @@ static DB_RESULT	__zbx_zbx_db_select(const char *fmt, ...)
 
 	return result;
 }
-
 
 /******************************************************************************
  *                                                                            *
