@@ -48,12 +48,12 @@
 #include "utils/nodechange.h"
 #include "escalator/escalator.h"
 
-char *progname = NULL;
-char title_message[] = "Zabbix Server";
-char usage_message[] = "[-hV] [-c <file>] [-n <nodeid>]";
+const char	*progname = NULL;
+const char	title_message[] = "Zabbix Server";
+const char	usage_message[] = "[-hV] [-c <file>] [-n <nodeid>]";
 
 #ifndef HAVE_GETOPT_LONG
-char *help_message[] = {
+const char	*help_message[] = {
         "Options:",
         "  -c <file>       Specify configuration file",
         "  -h              give this help",
@@ -62,7 +62,7 @@ char *help_message[] = {
         0 /* end of text */
 };
 #else
-char *help_message[] = {
+const char	*help_message[] = {
         "Options:",
         "  -c --config <file>       Specify configuration file",
         "  -h --help                give this help",
@@ -323,7 +323,7 @@ int main(int argc, char **argv)
 
 	int	nodeid = 0;
 
-	progname = argv[0];
+	progname = get_program_name(argv[0]);
 
 	/* Parse the command-line. */
 	while ((ch = (char)zbx_getopt_long(argc, argv, shortopts, longopts,NULL)) != (char)EOF)
